--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,12 @@
             <ul>
             {% for review in reviews %}
                 <li>
-                    <strong>Game:</strong> {{ review.game }}<br>
-                    <strong>Review:</strong> {{ review.review }}<br>
-                    <strong>Rating:</strong> {{ review.rating }}<br><br>
+                    <strong class="game-title">Game:</strong> {{ review.game }}<br>
+                    <strong class="review-text">Review:</strong> {{ review.review }}<br>
+                    <strong class="game-rating">Rating:</strong> {{ review.rating }}<br><br>
+                    <a href="{{ url_for('edit_review', review_id=review['_id']) }}">Edit</a> | 
+                    <a href="{{ url_for('delete_review', review_id=review['_id']) }}" 
+                       onclick="return confirm('Are you sure you want to delete this review?')">Delete</a>
                 </li>
             {% endfor %}
             </ul>
