--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <h1>Add a New Review</h1>
+    <h1>
+        <img src="static/images/Logo.jpg" alt="Site Logo">
+        Game Reviews Hub
+    </h1>
 
     <form action="{{ url_for('add_review') }}" method="POST">
         <label for="game">Game Title:</label><br>
@@ -19,7 +22,7 @@
         <label for="rating">Rating (1-5):</label><br>
         <input type="number" id="rating" name="rating" min="1" max="5" required><br><br>
 
-        <input type="submit" value="Add Review">
+        <input type="submit" value="Edit Review">
     </form>
 
     <br>
