--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <h1>Game Reviews</h1>
+    <h1>
+        <img src="static/images/Logo.jpg" alt="Site Logo">
+        Game Reviews Hub
+    </h1>
+    
 
     <!-- Search form -->
     <form action="{{ url_for('index') }}" method="GET">
