--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <h1>Game Reviews</h1>
+    <h1>
+        <img src="static/images/Logo.jpg" alt="Site Logo">
+        Game Reviews Hub
+    </h1>
 
     <!-- Link to Add a New Review -->
     <div>
-        <a href="{{ url_for('add_review_route') }}">Add a New Review</a>
+        <a href="{{ url_for('add_review') }}">Add a New Review</a>
     </div>
 
     <!-- Display Game Reviews -->
@@ -24,6 +27,10 @@
                         <em>Reviewed by:</em> {{ review.reviewer }}<br>
                         <p><strong>Comment:</strong> {{ review.comment }}</p>
                         <strong>Rating:</strong> {{ review.rating }}<br>
+                        <!-- Edit and Delete Links -->
+                        <a href="{{ url_for('edit_review', review_id=review['_id']) }}">Edit</a> |
+                        <a href="{{ url_for('delete_review', review_id=review['_id']) }}" 
+                           onclick="return confirm('Are you sure you want to delete this review?');">Delete</a>
                     </li>
                 {% endfor %}
             </ul>
