--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                         <strong>Rating:</strong> {{ review.rating }}<br>
                         <!-- Edit and Delete Links -->
                         <a href="{{ url_for('edit_review', review_id=review['_id']) }}">Edit</a> |
-                        <a href="{{ url_for('delete_review', review_id=review['_id']) }}" 
+                        <a href="{{ url_for('delete_review_route', review_id=review['_id']) }}" 
                            onclick="return confirm('Are you sure you want to delete this review?');">Delete</a>
                     </li>
                 {% endfor %}
