--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <h1>
-        <img src="static/images/Logo.jpg" alt="Site Logo">
-        Game Reviews Hub
-    </h1>
+    <header>
+        <h1>
+            <img src="{{ url_for('static', filename='images/Logo.jpg') }}" alt="Site Logo">
+            Game Reviews Hub
+        </h1>
+    </header>
 
     <!-- Link to Add a New Review -->
     <div>
@@ -18,17 +20,16 @@
     </div>
 
     <!-- Display Game Reviews -->
-    <div>
+    <section>
         {% if reviews %}
             <ul>
                 {% for review in reviews %}
                     <li>
-                        <strong>Game Title:</strong> {{ review.title }}<br>
-                        <em>Reviewed by:</em> {{ review.reviewer }}<br>
-                        <p><strong>Comment:</strong> {{ review.comment }}</p>
-                        <strong>Rating:</strong> {{ review.rating }}<br>
+                        <h3>{{ review['game'] }}</h3>
+                        <p><strong>Review:</strong> {{ review['review'] }}</p>
+                        <p><strong>Rating:</strong> {{ review['rating'] }}</p>
                         <!-- Edit and Delete Links -->
-                        <a href="{{ url_for('edit_review', review_id=review['_id']) }}">Edit</a> |
+                        <a href="{{ url_for('edit_review', review_id=review['_id']) }}">Edit</a> | 
                         <a href="{{ url_for('delete_review_route', review_id=review['_id']) }}" 
                            onclick="return confirm('Are you sure you want to delete this review?');">Delete</a>
                     </li>
@@ -37,6 +38,6 @@
         {% else %}
             <p>No reviews available.</p>
         {% endif %}
-    </div>
+    </section>
 </body>
 </html>
